# crc_cli

./: CMakeLists.txt  LICENSE.txt  README.md  crc.c  crc16.c  crc8.c
doc/: crc16.md  crc32.md  crc8.md  crc_poly.md  crc_start.md  update_crc16.md  update_crc32.md  update_crc8.md
include/: checksum.h
src/: crc16.c  crc32.c  crc8.c  main.c
tests/: test_checksum.c  test_crc.c
